# takeoff_behaviour

./: README.md
takeoff_behaviour/: CMakeLists.txt  README.md  package.xml
takeoff_behaviour/config/: takeoff_behaviour.yaml
takeoff_behaviour/include/: takeoff_behaviour.hpp
takeoff_behaviour/include/takeoff_behaviour/: takeoff_behaviour.hpp  takeoff_behaviourcs.hpp
takeoff_behaviour/launch/: takeoff_behaviour_launch.py
takeoff_behaviour/src/: takeoff_behaviour_node.cpp
takeoff_plugin_base/: CMakeLists.txt  package.xml
takeoff_plugin_base/include/takeoff_plugin_base/: takeoff_base.hpp  takeoff_baseCS.hpp
