<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>takeoff_plugin_base</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pedroariasperez96@gmail.com">parias</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>as2_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>as2_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
