<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>takeoff_plugin_base</name>
  <version>0.2.0</version>
  <description> Takeoff Plugin Base package</description>
  <maintainer email="cvar.upm3@gmail.com">Computer Vision And Aerial Robotics Group (UPM)</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>as2_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>as2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend> 
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
